hdf5-derive/tests/compile-fail/tuple-struct-no-repr.stderr
error: `H5Type` requires repr(C), repr(packed) or repr(transparent) for tuple structs
 --> $DIR/tuple-struct-no-repr.rs:7:8
  |
7 | struct Foo(i64);
  |        ^^^
